[package]
name = "merkle_proof_demo"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "merkle_proof_demo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
ahash = "=0.8.6"
sha2 = "0.9.8"
anchor-spl = "0.28.0"
hex = "0.4"
